[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "heimdal"
version = "0.6.0"
description = "Directory Encryption Tool"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "cryptography>=3.0",
]

[project.scripts]
heimdal = "heimdal.heimdal:main"

[project.urls]
"Homepage" = "https://github.com/mallocfree009/heimdal"
"Bug Tracker" = "https://github.com/mallocfree009/heimdal/issues"

[tool.setuptools]
packages = ["heimdal"]
